<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest02MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_title"
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/server_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_port"
        android:gravity="center"/>
    <Button
        android:id="@+id/server_connect_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_btn"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_title"
        android:textSize="24sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/client_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/client_address"></EditText>

        <EditText
            android:id="@+id/client_port_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/server_port"/>

    </LinearLayout>

    <EditText
        android:id="@+id/currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/currency"
        android:gravity="center"/>

    <Button
        android:id="@+id/client_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_text"
        android:layout_gravity="center"/>


</LinearLayout>